fixed calendar spill over

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -18,7 +18,6 @@
 #events_map, #event_map {
   margin-top: 1em;
   height: 400px;
-  width: 50%;
   border-radius: .4em;
 }
 
@@ -27,6 +26,14 @@
   height: 335px;
   width: 50%;
   border-radius: .4em;
+}
+
+#calendar h2 {
+  font-size: 20px;
+}
+.fc-toolbar.fc-header-toolbar {
+  width: 45em;
+  margin: 0px;
 }
 
 .cause {
